# optitrack_vrpn_clean

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: FindVRPN.cmake
config/: default.yaml  mocap_frames.rviz
include/optitrack_vrpn_clean/: config.hpp  optitrack_client.hpp  output_dispatcher.hpp  pose.hpp  time_manager.hpp  tracker_handler.hpp
scripts/: compare_pair_diagnostic.py  compare_pair_trajectory.py  install_ubuntu22_deps.sh  record_marker_pose_stats.py  run_mujoco_rviz.sh  run_optitrack_rviz.sh  run_optitrack_rviz_record.sh  rviz_udp_frames.py
src/: config.cpp  main.cpp  mocap_pair_diagnostic.cpp  optitrack_client.cpp  output_dispatcher.cpp  pose.cpp  time_manager.cpp  tracker_handler.cpp
tests/: conversion_test.cpp
